--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "expo": "~44.0.0",
     "expo-app-loading": "^1.3.0",
     "expo-font": "~10.0.4",
+    "expo-linear-gradient": "~11.0.0",
     "expo-status-bar": "~1.2.0",
     "react": "17.0.1",
     "react-dom": "17.0.1",
@@ -25,8 +26,7 @@
     "react-native-safe-area-context": "3.3.2",
     "react-native-screens": "~3.10.1",
     "react-native-web": "0.17.1",
-    "react-navigation-tabs": "^2.11.1",
-    "expo-linear-gradient": "~11.0.0"
+    "react-navigation-tabs": "^2.11.1"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9"
