--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@react-navigation/bottom-tabs": "^6.0.9",
     "@react-navigation/native": "^6.0.6",
     "@react-navigation/native-stack": "^6.2.5",
+    "emailjs-com": "^3.2.0",
     "expo": "~44.0.0",
     "expo-app-loading": "^1.3.0",
     "expo-font": "~10.0.4",
@@ -24,6 +25,7 @@
     "react": "17.0.1",
     "react-dom": "17.0.1",
     "react-native": "0.64.3",
+    "react-native-email": "^1.1.0",
     "react-native-linear-gradient": "^2.5.6",
     "react-native-safe-area-context": "3.3.2",
     "react-native-screens": "~3.10.1",
