--- a/package.json
+++ b/package.json
@@ -20,15 +20,16 @@
     "expo-font": "~10.0.4",
     "expo-linear-gradient": "~11.0.0",
     "expo-status-bar": "~1.2.0",
+    "i18next": "^21.6.7",
     "react": "17.0.1",
     "react-dom": "17.0.1",
+    "react-i18next": "^11.15.3",
     "react-native": "0.64.3",
     "react-native-linear-gradient": "^2.5.6",
     "react-native-safe-area-context": "3.3.2",
     "react-native-screens": "~3.10.1",
     "react-native-web": "0.17.1",
-    "react-navigation-tabs": "^2.11.1",
-    "expo-linear-gradient": "~11.0.0"
+    "react-navigation-tabs": "^2.11.1"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9"
