--- a/package.json
+++ b/package.json
@@ -10,19 +10,17 @@
     "eject": "expo eject"
   },
   "dependencies": {
-    "@expo-google-fonts/dev": "^0.2.2",
     "@expo-google-fonts/orbitron": "^0.2.2",
     "@react-navigation/bottom-tabs": "^6.0.9",
     "@react-navigation/native": "^6.0.6",
     "@react-navigation/native-stack": "^6.2.5",
-    "emailjs-com": "^3.2.0",
     "expo": "~44.0.0",
     "expo-app-loading": "^1.3.0",
     "expo-font": "~10.0.4",
     "expo-linear-gradient": "~11.0.0",
     "expo-status-bar": "~1.2.0",
-    "i18next": "^21.6.7",
     "formik": "^2.2.9",
+    "i18next": "^21.6.7",
     "react": "17.0.1",
     "react-dom": "17.0.1",
     "react-i18next": "^11.15.3",
@@ -31,6 +29,7 @@
     "react-native-linear-gradient": "^2.5.6",
     "react-native-safe-area-context": "3.3.2",
     "react-native-screens": "~3.10.1",
+    "react-native-typewriter": "^0.7.0",
     "react-native-web": "0.17.1",
     "react-navigation-tabs": "^2.11.1",
     "yup": "^0.32.11"
