--- a/package.json
+++ b/package.json
@@ -20,10 +20,12 @@
     "expo-linear-gradient": "~11.0.0",
     "expo-status-bar": "~1.2.0",
     "formik": "^2.2.9",
-    "i18next": "^21.6.7",
+    "i18next": "^21.6.10",
     "react": "17.0.1",
     "react-dom": "17.0.1",
+    "react-i18next": "^11.15.3",
     "react-native": "0.64.3",
+    "react-native-email": "^1.1.0",
     "react-native-linear-gradient": "^2.5.6",
     "react-native-safe-area-context": "3.3.2",
     "react-native-screens": "~3.10.1",
