--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "react-dom": "17.0.1",
     "react-i18next": "^11.15.3",
     "react-native": "0.64.3",
+    "react-native-animatable": "^1.3.3",
     "react-native-email": "^1.1.0",
     "react-native-linear-gradient": "^2.5.6",
     "react-native-safe-area-context": "3.3.2",
