--- a/app.json
+++ b/app.json
@@ -2,6 +2,9 @@
   "expo": {
     "name": "Portfolio-React-Native",
     "slug": "Portfolio-React-Native",
+    "privacy": "public",
+    "owner": "cuongto",
+    "description": "",
     "version": "1.0.0",
     "orientation": "portrait",
     "icon": "./assets/icon.png",
