update and dubbel check

--- a/app.json
+++ b/app.json
@@ -4,7 +4,7 @@
     "slug": "portfolioreactnative",
     "privacy": "public",
     "description": "An application that show my portfolio.",
-    "owner": "mandus",
+    "owner": "cuong",
     "version": "1.0.0",
     "orientation": "portrait",
     "icon": "./assets/icon.png",
