--- a/app.json
+++ b/app.json
@@ -19,9 +19,12 @@
     "assetBundlePatterns": ["**/*"],
     "ios": {
       "supportsTablet": true,
-      "bundleIdentifier": "com.mandus.portfolioreactnative"
+      "bundleIdentifier": "com.mandus.portfolioreactnative",
+      "buildNumber":"1.0.0"
     },
     "android": {
+      "package": "com.mandus.portfolioreactnative",
+      "versionCode": 1,
       "adaptiveIcon": {
         "foregroundImage": "./assets/adaptive-icon.png",
         "backgroundColor": "#FFFFFF"
