--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
     "@react-navigation/bottom-tabs": "^6.0.9",
     "@react-navigation/native": "^6.0.6",
     "@react-navigation/native-stack": "^6.2.5",
-    "expo": "^1.0.0",
+    "expo": "~44.0.0",
     "expo-app-loading": "^1.3.0",
     "expo-font": "~10.0.4",
     "expo-linear-gradient": "~11.0.3",
@@ -24,7 +24,7 @@
     "react": "17.0.1",
     "react-dom": "17.0.1",
     "react-i18next": "^11.15.3",
-    "react-native": "^0.61.4",
+    "react-native": "^0.64.3",
     "react-native-animatable": "^1.3.3",
     "react-native-email": "^1.1.0",
     "react-native-linear-gradient": "^2.5.6",
